--- a/release-notes/0.0.4.md
+++ b/release-notes/0.0.4.md
@@ -1,2 +1,1 @@
-- Removes the printenv task that would log sensitive information (service bindings) to logs. 
-- Adds a new simple task that simply echoes a message.
+Bad release. Sorry.
